Initial commit on new branch

--- a/jobko/index.html
+++ b/jobko/index.html
@@ -90,7 +90,7 @@
     <div class="app-content style-2">
         <div class="tf-container">
             <div class="search-box">
-                <a href="search-result.html" class="icon-left">
+                <a href="services.html" class="icon-left">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g opacity="0.5">
                             <path
@@ -178,7 +178,7 @@
             <div class="mt-24">
                 <div class="fl-title d-flex justify-content-between align-items-center">
                     <h4>Popular Services</h4>
-                    <a href="all-job.html" class="button-1">See All</a>
+                    <a href="services.html" class="button-1">See All</a>
                 </div>
                 <div dir="ltr" class="mt-24 swiper tf-sw-2 sw-lr" data-preview="1.2" data-space="20">
                     <div class="swiper-wrapper">
@@ -299,7 +299,7 @@
             <div class="mt-24">
                 <div class="fl-title d-flex justify-content-between align-items-center">
                     <h4>Popular Services</h4>
-                    <a href="all-job.html" class="button-1">See All</a>
+                    <a href="services.html" class="button-1">See All</a>
                 </div>
                 <div class="mt-20 list-jobs">
                     <div class="job-item">
@@ -904,8 +904,8 @@
                             <li><a href="passport-prep.html" class="nav-link-item pt-12 pb-12 line-bt no-page">
                                     <span>Passport Prep (MVP)</span>
                                 </a></li>
-                            <li><a href="search-job.html" class="nav-link-item pt-12 pb-12 line-bt no-page">
-                                    <span>Search Services</span>
+                            <li><a href="services.html" class="nav-link-item pt-12 pb-12 line-bt no-page">
+                                    <span>All Services</span>
                                 </a></li>
                             <li class="pt-16 pb-8 text-sm-start text-uppercase fw-7 text-dark">User</li>
                             <li><a href="profile.html" class="nav-link-item pt-12 pb-12 line-bt no-page">
